Section 2/Labs/2.1.6/ingress.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    labels:
      app: rancher
      chart: rancher-2.4.2
      heritage: Helm
      release: rancher
    name: rancher
    namespace: cattle-system
  spec:
    rules:
    - host: mikhail.simpleblocks.net
      http:
        paths:
        - backend:
            serviceName: rancher
            servicePort: 80
    tls:
    - hosts:
      - mikhail.simpleblocks.net
      secretName: tls-rancher-ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
