Section 2/Labs/2.1.6/ingress_template.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    labels:
      app: rancher
      chart: rancher-2.4.2
      heritage: Helm
      release: rancher
    name: rancher
    namespace: cattle-system
  spec:
    rules:
    - host: HOSTNAME
      http:
        paths:
        - backend:
            serviceName: rancher
            servicePort: 80
    tls:
    - hosts:
      - HOSTNAME
      secretName: tls-rancher-ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
